Stop link box from overflowing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -112,6 +112,7 @@ a {
 
 #js-quote-source {
     text-transform: none;
+    word-break: break-all;
 }
 
 .link-actions {
